--- a/src/common/template/custom.css
+++ b/src/common/template/custom.css
@@ -1,3 +1,9 @@
+@import url(https://cdn.jsdelivr.net/gh/tonsky/FiraCode@1.207/distr/fira_code.css);
+@import url(https://fonts.googleapis.com/css?family=Questrial&display=swap);
+
+*{
+  font-family: 'Questrial', sans-serif;
+}
 /*
  * Globals
  */
@@ -176,3 +182,44 @@ img {
   display: block;
   width: 100%;
 }
+
+
+.navbar-nav > li > a {
+  padding-right: 0;
+  padding-left: 0;
+  font-size: 18px;
+  text-decoration: none;
+  color: white; /* IE8 proofing */
+  border-bottom: none;
+}
+
+
+.navbar-nav > li{
+  text-align: center;
+  margin-right: 40px;
+  font-family: 'Questrial', sans-serif;
+}
+
+
+.navbar-nav > .active{
+  border-bottom: 2px solid white;
+}
+
+.navbar-brand{
+  font-size: 25px;
+  font-family: 'Questrial', sans-serif;
+}
+
+.licita{
+  color: #ea80fc;
+}
+
+.if{
+  color: white;
+}
+
+.licita, .if{
+  font-size: 35px;
+  font-weight: bold;
+}
+
