--- a/src/chat/css/chat.css
+++ b/src/chat/css/chat.css
@@ -29,7 +29,7 @@
 }
 
 .top_menu {
-    background-color: #F44336;
+    background-color: #5e35b1;
     width: 100%;
     padding: 20px 0 15px;
     box-shadow: 0 1px 30px rgba(0, 0, 0, 0.1);
@@ -53,7 +53,7 @@
 }
 
 .top_menu .buttons .button.close {
-    background-color: red;
+    background-color: white;
     line-height: 20px;
     opacity: 1;
 }
@@ -61,9 +61,11 @@
 .top_menu .buttons .button.close,
 .top_menu .buttons .button.minimize,
 .top_menu .buttons .button.maximize {
-    font-size: 15px;
+    font-size: 20px;
     text-align: center;
-    color: white;
+    line-height: 20px;
+    color: black;
+    background-color: white;
 }
 
 .close:focus, .close:hover,
@@ -73,20 +75,9 @@
     opacity: 1 !important;
 }
 
-.top_menu .buttons .button.minimize {
-    background-color: lightblue;
-}
-
-.top_menu .buttons .button.maximize {
-    background-color: green;
-}
-
 .top_menu .title {
     text-align: center;
     color: white;
-    line-height: 20px;
-    align-items: center;
-    justify-content: center;
     font-size: 20px;
 }
 
@@ -113,7 +104,7 @@
 }
 
 .messages .message.received .avatar {
-    background-color: #050505;
+    background-color: #4a148c;
     color: white;
     align-items: center;
     justify-content: center;
@@ -135,24 +126,23 @@
 }
 
 .messages .message.sent .avatar {
-    background-color: #3593ff;
-    color:#3593ff;
+    background-color: #b388ff;
     float: right;
 }
 
 .messages .message.sent .text_wrapper {
-    background-color: #c7eafc;
+    background-color: #b388ff;
     margin-right: 20px;
     float: right;
 }
 
 .messages .message.sent .text_wrapper::after, .messages .message.sent .text_wrapper::before {
     left: 100%;
-    border-left-color: #c7eafc;
+    border-left-color: #b388ff;
 }
 
 .messages .message.sent .text {
-    color: #45829b;
+    color: white;
 }
 
 .messages .message.appeared {
@@ -239,8 +229,8 @@
     height: 50px;
     display: inline-block;
     border-radius: 50px;
-    background-color: black;
-    border: 2px solid #555555;
+    background-color: #651fff;
+    border: 2px solid #651fff;
     color: #fff;
     cursor: pointer;
     transition: all 0.2s linear;
@@ -249,7 +239,7 @@
 }
 
 .bottom_wrapper .send_message:hover {
-    color: #a3d063;
+    color: #651fff;
     background-color: #fff;
 }
 
