[UP] Paginas home, about e faqs.

--- a/src/chat/css/chat.css
+++ b/src/chat/css/chat.css
@@ -253,3 +253,9 @@
 .message_template {
     display: none;
 }
+
+.message.received .text_wrapper a{
+    text-decoration: none;
+    color: inherit;
+}
+
