--- a/src/common/template/custom.css
+++ b/src/common/template/custom.css
@@ -229,12 +229,12 @@ img {
 .title-item-list{
   text-align: left;
   font-weight: bold;
-  font-size: 22px;
+  font-size: 25px;
 }
 
 .description-item-list{
   text-align: left;
-  font-size: 20px;
+  font-size: 23px;
   color: #616161 !important;
 }
 
@@ -245,13 +245,13 @@ img {
 
 .content-item-list-left{
   float: left;
-  
+  font-size: 23px;
 }
 
 .link-doc{
   font-weight: bold;
-  font-size: 20px;
-  line-height: 20px;
+  font-size: 23px;
+  line-height: 23px;
   vertical-align: middle;
 }
 
@@ -264,7 +264,7 @@ img {
   margin-bottom: 30%;
 }
 
-.checklist{
+.checklist, .alert-checklist {
   background-color: #2962ff;
 }
 
@@ -272,11 +272,11 @@ img {
   background-color: #ff1744;
 }
 
-.open-process{
+.abrir-processo{
   background-color: #4dd0e1;
 }
 
-.other{
+.outros{
   background-color: #212121;
 }
 
@@ -321,3 +321,76 @@ img {
   text-decoration: none !important;
 }
 
+.w-85 {
+  width: 85% !important;
+}
+
+.w-80 {
+  width: 80% !important;
+}
+
+.w-90 {
+  width: 90% !important;
+}
+
+.w-15 {
+  width: 15% !important;
+}
+
+.w-10 {
+  width: 10% !important;
+}
+
+.w-25 {
+  width: 25% !important;
+}
+
+
+.w-40 {
+  width: 40% !important;
+}
+
+.w-45 {
+  width: 45% !important;
+}
+
+.faqs-content > .faq-pergunta{
+  font-size: 30px;
+  margin-bottom: 1%;
+  color: #616161;
+  font-weight: bold;
+}
+
+.faqs-content > .faq-resposta{
+  text-align: justify;
+  font-size: 23px;
+  background-color: #e1bee7;
+  border-radius: 1.5rem;
+  color:#4a148c;
+  padding: 2%;
+}
+
+.label-resp{
+  font-size: 23px;
+  font-weight: bold;
+}
+
+.faq-container{
+  background-color: #f5f5f5;
+  padding: 2%;
+  margin-bottom: 2%;
+  border-radius: 1rem;
+}
+
+.faq-tags{
+  margin-top: 2%;
+  font-size: 25px;
+}
+
+.faq-tag{
+  margin-right: 1%;
+  margin-bottom: 1%;
+  background-color: #7b1fa2;
+  color: white;
+  text-align: center;
+}
