--- a/src/chat/css/chat.css
+++ b/src/chat/css/chat.css
@@ -79,6 +79,7 @@
     text-align: center;
     color: white;
     font-size: 20px;
+    align-items: center;
 }
 
 .top_menu .title:hover {
@@ -257,5 +258,18 @@
 .message.received .text_wrapper a{
     text-decoration: none;
     color: inherit;
+}
+
+.ball-on {
+    border-radius: 50%;
+    height: 10px;
+    width: 10px;
+    line-height: 20px;
+    background-color: #00e676;
+    display: inline-block;
+}
+
+.text-title{
+    margin-left: 5%;
 }
 
