--- a/src/common/template/custom.css
+++ b/src/common/template/custom.css
@@ -3,6 +3,14 @@
 *{
   font-family: 'Questrial', sans-serif;
 }
+
+*  {
+  margin:0;
+  padding:0;
+}
+
+html, body {height:100%;}
+
 /*
  * Globals
  */
@@ -280,8 +288,14 @@ img {
   background-color: #212121;
 }
 
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
 .footer{
   background-color: #6a1b9a;
+  margin-bottom: -174px;
 }
 
 .footer .inner > p{
@@ -399,4 +413,49 @@ img {
   color: #7b1fa2 !important;
   font-weight: bold;
   font-size: 18px;
+}
+
+.title-docs{
+  color:#7b1fa2;
+  margin-bottom: 1%;
+  font-size:70px;
+  text-align:center;
+  margin-top: 120px;
+}
+
+.message-no-docs{
+  font-size: 25px;
+  text-align: center;
+  font-weight: bold;
+  padding: 7%;
+  margin-bottom: 7%;
+  margin-top: 5%;
+}
+
+.img-about{
+  display: block;
+  margin-left: auto !important;
+  margin-right: auto !important;
+  margin-bottom: 3%;
+}
+
+.title-tec-about{
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center !important;
+  font-weight: 30px;
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+
+.title-tecs{
+  font-weight: bold;
+  margin-bottom: 5%;
+}
+
+.text-tecs{
+  text-align: justify;
+  padding-left: 15px;
+  padding-right: 15px;
+  font-size: 22px;
 }
