--- a/src/common/template/custom.css
+++ b/src/common/template/custom.css
@@ -311,7 +311,9 @@ html, body {
   font-size: 250px;
   text-align: center;
   vertical-align: middle;
-  background-color: #aa00ff;
+  background: rgb(123,31,162);
+  background: linear-gradient(90deg, rgba(123,31,162,1) 0%, rgba(123,31,162,1) 51%, rgba(83,109,254,1) 97%);
+  padding-bottom: 10px;
 }
 
 
@@ -459,3 +461,4 @@ html, body {
   padding-right: 15px;
   font-size: 22px;
 }
+
