--- a/src/common/template/custom.css
+++ b/src/common/template/custom.css
@@ -516,7 +516,7 @@ html, body {
 
   .content-div-home {
     font-size: 22px;
-    padding: 22px;
+    padding: 2px;
   }
 
 
@@ -568,6 +568,7 @@ html, body {
   .faqs-content > .faq-pergunta {
     font-size: 20px;
     text-align: center;
+    padding: 5px;
   }
 
   .faq-container {
@@ -593,5 +594,9 @@ html, body {
 
   .label-resp{
     font-size: 18px;
+  }
+
+  .faq-tag {
+    margin-right: 4%;
   }
 }
