--- a/src/common/template/custom.css
+++ b/src/common/template/custom.css
@@ -484,6 +484,10 @@ html, body {
   padding-bottom: 10px;
 }
 
+.col-icon-sm{
+  display:none;
+}
+
 
 
 /**
@@ -521,7 +525,7 @@ html, body {
 
 
   .col-icon-sm{
-    visibility: visible;
+    display: inline;
   }
 
   .col-icon-2{
