--- a/src/common/template/custom.css
+++ b/src/common/template/custom.css
@@ -604,3 +604,60 @@ html, body {
     margin-right: 4%;
   }
 }
+
+/**
+  Responsividade da página docs.
+*/
+@media screen and (max-width: 480px) {
+  .title-docs {
+    font-size: 55px;
+    margin-top: 100px;
+  }
+
+  .list-docs{
+    width: 95%!important;
+    margin-bottom: 0%!important;
+  }
+
+  .docs {
+    margin-bottom: 4%;
+  }
+
+  .content-item-list-left{
+    width: 100%!important;
+    float: none;
+  }
+
+  .title-item-list {
+    text-align: center;
+    font-size: 20px;
+  }
+
+  .description-item-list {
+    text-align: justify;
+    font-size: 20px;
+    padding-right: 0%!important;
+  }
+
+  .content-item-list-rigth {
+    float: none;
+    width: 100%!important;
+    padding-left: 0%!important;
+  }
+
+  .type-doc {
+    margin-top: 5%;
+    margin-bottom: 7%;
+  }
+
+  .link-doc {
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .message-no-docs {
+    font-size: 20px;
+    margin-bottom: 17%;
+    margin-top: 10%;
+}
+}
