--- a/src/common/template/custom.css
+++ b/src/common/template/custom.css
@@ -661,3 +661,73 @@ html, body {
     margin-top: 10%;
 }
 }
+
+.title-about{
+  color:#7b1fa2;
+  margin-bottom: 1%;
+  font-size:70px;
+  margin-top:120px;
+  text-align:center;
+}
+
+.about-text{
+  font-size:25px;
+}
+
+.about-text-2{
+  margin-top:3%;
+}
+
+/**
+  Responsividade da página docs.
+*/
+@media screen and (max-width: 480px) {
+  .title-about {
+    margin-bottom: 3%;
+    font-size: 45px;
+    margin-top: 100px;
+  }
+
+  .about-text{
+    width: 90%!important;
+    padding-top:3%;
+    padding-bottom:3%;
+    font-size: 20px;
+  }
+
+  .about-text-2{
+    margin-top:3%!important;
+  }
+
+  .title-tec-about {
+    font-size: 25px;
+    font-weight: 25px;
+    margin-top: 3%;
+    margin-bottom: 3%;
+  }
+
+  .col-tec{
+    flex:none!important;
+    max-width: 100%!important;
+  }
+
+  .row{
+    margin-right: auto!important;
+    margin-left: auto!important;
+  }
+
+  .title-tecs {
+    font-weight: bold;
+    margin-bottom: 2%!important;
+  }
+
+  .text-tecs{
+    font-size: 20px;
+    margin-bottom: 10%;
+    text-align: unset;
+  }
+
+  .jumbotron{
+    margin-bottom: 1rem!important;
+  }
+}
