--- a/public/app.css
+++ b/public/app.css
@@ -610,6 +610,132 @@ html, body {
   }
 }
 
+/**
+  Responsividade da página docs.
+*/
+@media screen and (max-width: 480px) {
+  .title-docs {
+    font-size: 55px;
+    margin-top: 100px;
+  }
+
+  .list-docs{
+    width: 95%!important;
+    margin-bottom: 0%!important;
+  }
+
+  .docs {
+    margin-bottom: 4%;
+  }
+
+  .content-item-list-left{
+    width: 100%!important;
+    float: none;
+  }
+
+  .title-item-list {
+    text-align: center;
+    font-size: 20px;
+  }
+
+  .description-item-list {
+    text-align: justify;
+    font-size: 20px;
+    padding-right: 0%!important;
+  }
+
+  .content-item-list-rigth {
+    float: none;
+    width: 100%!important;
+    padding-left: 0%!important;
+  }
+
+  .type-doc {
+    margin-top: 5%;
+    margin-bottom: 7%;
+  }
+
+  .link-doc {
+    font-size: 20px;
+    line-height: 20px;
+  }
+
+  .message-no-docs {
+    font-size: 20px;
+    margin-bottom: 17%;
+    margin-top: 10%;
+}
+}
+
+.title-about{
+  color:#7b1fa2;
+  margin-bottom: 1%;
+  font-size:70px;
+  margin-top:120px;
+  text-align:center;
+}
+
+.about-text{
+  font-size:25px;
+}
+
+.about-text-2{
+  margin-top:3%;
+}
+
+/**
+  Responsividade da página docs.
+*/
+@media screen and (max-width: 480px) {
+  .title-about {
+    margin-bottom: 3%;
+    font-size: 45px;
+    margin-top: 100px;
+  }
+
+  .about-text{
+    width: 90%!important;
+    padding-top:3%;
+    padding-bottom:3%;
+    font-size: 20px;
+  }
+
+  .about-text-2{
+    margin-top:3%!important;
+  }
+
+  .title-tec-about {
+    font-size: 25px;
+    font-weight: 25px;
+    margin-top: 3%;
+    margin-bottom: 3%;
+  }
+
+  .col-tec{
+    flex:none!important;
+    max-width: 100%!important;
+  }
+
+  .row{
+    margin-right: auto!important;
+    margin-left: auto!important;
+  }
+
+  .title-tecs {
+    font-weight: bold;
+    margin-bottom: 2%!important;
+  }
+
+  .text-tecs{
+    font-size: 20px;
+    margin-bottom: 10%;
+    text-align: unset;
+  }
+
+  .jumbotron{
+    margin-bottom: 1rem!important;
+  }
+}
 * {
     box-sizing: border-box;
 }
@@ -934,7 +1060,12 @@ html, body {
 
     .bottom_wrapper .message_input_wrapper {
         width: calc(100% - 130px);
-    }  
+    }
+    
+    .link-chat{
+        word-wrap: break-word;
+        font-size:15px;
+      }
 }
 
 
