--- a/src/chat/css/chat.css
+++ b/src/chat/css/chat.css
@@ -330,3 +330,14 @@
       }
 }
 
+.border-name-doc {
+    width: 100%!important;
+    border: 2px solid #4db6ac;
+    background-color: #80cbc4;
+    color: #004d40!important;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 1rem;
+    text-align: center;
+    padding: 2%;
+}
