--- a/src/common/template/custom.css
+++ b/src/common/template/custom.css
@@ -319,7 +319,8 @@ html, body {
 
 .content-div-home{
   vertical-align: middle;
-  font-size: 30px;
+  text-align: center;
+  font-size: 25px;
   padding: 30px;
   color: #757575;
 }
@@ -328,7 +329,7 @@ html, body {
 .title-div-home{
   margin-top: 5%;
   font-weight: bold;
-  font-size: 40px;
+  font-size: 30px;
   color: #6a1b9a;
 }
 
@@ -503,7 +504,9 @@ html, body {
   }
   
   .project-info-description{
-    font-size:22px;
+    font-size:25px;
+    padding-left: 10%;
+    padding-right: 10%;
   }
 
   .lead {
@@ -521,6 +524,9 @@ html, body {
   .content-div-home {
     font-size: 22px;
     padding: 2px;
+    padding-left: 10%;
+    text-align: justify;
+    padding-right: 10%;
   }
 
 
