--- a/src/chat/css/chat.css
+++ b/src/chat/css/chat.css
@@ -14,6 +14,7 @@
     background-color: #f8f8f8;
     overflow: hidden;
     height: 60px;
+    z-index: 5;
 }
 
 @media screen and (max-width: 480px) {
